# Ember

./: CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Ember/: CMakeLists.txt
Ember/src/: Ember.h
Ember/src/Ember/: Entry.h
Ember/src/Ember/Application/: Application.cpp  Application.h
Ember/src/Ember/Log/: Log.cpp  Log.h
